lanecwe-Prod/src/objects/GCS_Acq_Opportunity_Scorecard__c.object
<CustomObject>
    <description>Used by the GCS Acquisition Team to manage potential deals</description>
    <fields>
        <fullName>Completion__c</fullName>
        <description>Total_Score__c/ Total # of Questions
Both values are dynamically calculated based on fields which start with Q</description>
        <label>Completion %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>IMAGE(&apos;servlet/servlet.FileDownload?file=01513000003QBHU&apos;,&apos;&apos;,17,17) + &quot; &quot; +  TEXT(Total_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legend__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=01513000003QBHV&quot;, &quot;2 = YES  | 1 = Somewhat  |  0 = NO&quot;,62,189)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>`</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps_10__c</fullName>
        <label>10. Next Steps</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps_11__c</fullName>
        <label>11. Next Steps</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps_12__c</fullName>
        <label>12. Next Steps</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Scorecards</relationshipLabel>
        <relationshipName>Opp_Scorecards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q10__c</fullName>
        <inlineHelpText>Have we identified the benefits to the prospects&apos; business of improved collaboration?</inlineHelpText>
        <label>10. Identified improved collab benefits?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q11__c</fullName>
        <inlineHelpText>Have we defined win themes?</inlineHelpText>
        <label>11. Defined win themes?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12__c</fullName>
        <inlineHelpText>Can we articulate PGi&apos;s unique business value that will drive the prospect to action?</inlineHelpText>
        <label>12. Articulated PGi&apos;s business value?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Total_1_Display__c</fullName>
        <formula>IMAGE(&apos;servlet/servlet.FileDownload?file=01513000003QBHU&apos;,&apos;&apos;,17,17) + &quot; &quot; + TEXT(Sub_Total_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LEGEND REMINDER
2 = YES
1 = SOMEWHAT
0 = NO</inlineHelpText>
        <label>SUB-TOTAL PROSPECT OVERVIEW/INTELLIGENCE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Total_1__c</fullName>
        <formula>BLANKVALUE(VALUE(TEXT(Q1__c)), 0) + BLANKVALUE(VALUE(TEXT(Q2__c)), 0) + BLANKVALUE(VALUE(TEXT(Q3__c)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SUB-TOTAL Prospect Overview/Intel (r)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Total_2_Display__c</fullName>
        <formula>IMAGE(&apos;servlet/servlet.FileDownload?file=01513000003QBHU&apos;,&apos;&apos;,17,17) + &quot; &quot; + TEXT(Sub_Total_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LEGEND REMINDER 
2 = YES 
1 = SOMEWHAT 
0 = NO</inlineHelpText>
        <label>SUB-TOTAL COLLABORATION STRATEGY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Total_2__c</fullName>
        <formula>BLANKVALUE(VALUE(TEXT(Q4__c)), 0) + BLANKVALUE(VALUE(TEXT(Q5__c)), 0) + BLANKVALUE(VALUE(TEXT(Q6__c)), 0) + BLANKVALUE(VALUE(TEXT(Q7__c)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SUB-TOTAL Collaboration Strategy (r)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Total_3_Display__c</fullName>
        <formula>IMAGE(&apos;servlet/servlet.FileDownload?file=01513000003QBHU&apos;,&apos;&apos;,17,17) + &quot; &quot; + TEXT(Sub_Total_3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LEGEND REMINDER 
2 = YES 
1 = SOMEWHAT 
0 = NO</inlineHelpText>
        <label>SUB-TOTAL WIN STRATEGY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Total_3__c</fullName>
        <formula>BLANKVALUE(VALUE(TEXT(Q8__c)), 0) + BLANKVALUE(VALUE(TEXT(Q9__c)), 0) + BLANKVALUE(VALUE(TEXT(Q10__c)), 0) + BLANKVALUE(VALUE(TEXT(Q11__c)), 0) + BLANKVALUE(VALUE(TEXT(Q12__c)), 0) + BLANKVALUE(VALUE(TEXT(Q13__c)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SUB-TOTAL Win Strategy (r)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <description>Dynamically sum all Question fields which start with Q</description>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMgr_of_SC_Owner__c</fullName>
        <description>Shows as true if the user is the owner of the Scorecard record or the manager of the owner, or mgrs mgr, mgrs mgrs mgr, etc.</description>
        <formula>IF(
$User.Id =  OwnerId, True,
IF(
$User.Id =  Owner:User.ManagerId, True,
IF(
$User.Id =  Owner:User.Manager.ManagerId, True,
IF(
$User.Id =  Owner:User.Manager.Manager.ManagerId, True,
IF(
$User.Id =  Owner:User.Manager.Manager.Manager.ManagerId, True,
IF(
$User.Id =  Owner:User.Manager.Manager.Manager.Manager.ManagerId, True, False
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isMgr of SC Owner</label>
        <type>Checkbox</type>
    </fields>
    <label>GCS Acq. Opportunity Scorecard</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCS Acq. Opportunity Scorecards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>